--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -1,5 +1,9 @@
 [profile.default]
-optimizer = false
-evm_version = "cancun"
+optimizer = true
+optimizer_runs = 200
+evm_version = "istanbul"
+via_ir = false
+[profile.default.optimizer_details]
+yul = false
 remappings = ["forge-std=lib/forge-std/src/"]
 fs_permissions = [{ access = "read-write", path = "./" }]
